chamges made for text align

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Odin  Recipes</title>
     <h1 style="color: aliceblue;">Odin Recipes</h1>
 </head>
-<body background="assets/image.png">
+<body background="assets/image.png" style="text-align: center;">
     <h2>Recipes List</h2>
     <ul>
         <li ><h2><a style="color: antiquewhite;" href="recipes/lasagna.html">Lasagna</a></h2></li>
