--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
 </head>
-<body style="background-color: azure;">
+<body style="background-color:bisque; text-align:justify;">
     <h2>Description</h2>
     <p>Lasagna is a savory Italian dish made of stacked layers of wide pasta sheets, rich tomato sauce, creamy béchamel, and seasoned ground meat, typically beef or sausage. Each layer melds together to create a harmonious blend of flavors, while the melted cheese on top adds a golden, indulgent finish. It's a comforting classic that invites warmth and satisfaction with every bite.</p>
     <h2>Steps</h2>
