used box model to set the contents in page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Odin  Recipes</title>
-    <h1 style="color: aliceblue;">Odin Recipes</h1>
+    <h1>Odin Recipes</h1>
 </head>
-<body background="assets/image.png" style="text-align: center;">
+<body >
     <h2>Recipes List</h2>
     <ul>
-        <li ><h2><a style="color: antiquewhite;" href="recipes/lasagna.html">Lasagna</a></h2></li>
-        <li ><h2><a style="color: antiquewhite;" href="recipes/pasta.html">Pasta</a></h2></li>
-        <li ><h2><a style="color: antiquewhite;" href="recipes/pizza.html">Pizza</a></h2></li>
+        <li ><h2 class="lasagna"><a style="color: antiquewhite;" href="recipes/lasagna.html">Lasagna</a></h2></li>
+        <li ><h2 class="pasta"><a style="color: antiquewhite;" href="recipes/pasta.html">Pasta</a></h2></li>
+        <li ><h2 class="pizza"><a style="color: antiquewhite;" href="recipes/pizza.html">Pizza</a></h2></li>
     </ul>
 </body>
 </html>
